--- a/index.html
+++ b/index.html
@@ -10,48 +10,62 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>Café Les Folies</title>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #20022F;">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Cafe Les Folies</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #20022F;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png" class="logo"></a>
+    </div>
+  </nav>
 
       <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/img1-cafe.png" class="d-block w-100 img-fluid" alt="Café Les Folies">
-            <div class="carousel-caption d-none d-md-block over-img-text">
+            <div class="carousel-caption d-none d-md-block over-img-text img-fluid">
               <h5>¿Quieres trabajar con nosotros?</h5>
               <p>Contactanos a través de WhatsApp</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/img2-cafe.png" class="d-block w-100 img-fluid" alt="Café Les Folies">
-            <div class="carousel-caption d-none d-md-block over-img-text">
+            <div class="carousel-caption d-none d-md-block over-img-text img-fluid">
               <h5>¿Quieres trabajar con nosotros?</h5>
               <p>Contactanos a través de WhatsApp</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/img3-cafe.png" class="d-block w-100 img-fluid" alt="Café Les Folies">
-            <div class="carousel-caption d-none d-md-block over-img-text">
+            <div class="carousel-caption d-none d-md-block over-img-text img-fluid">
               <h5>¿Quieres trabajar con nosotros?</h5>
               <p>Contactanos a través de WhatsApp</p>
             </div>
           </div>
         </div>
       </div>
-        <div class="col-xs-12 center-xs col-md-8 col-md-offset-2">
+<br><br>
+      <div class="container-fluid">
+        <div class="row center-xs">
+            <h1><b>Oferta Laboral</b></h1>
+            <div class="card col-xs-12 col-md-3 boxes">
+              <div class="card-body">
+                <h3>Promotor - Promotora</h3>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a class="btn btn-dark" href="derechos-familia.html" role="button" title="barra">Contactanos</a>
+              </div>
+            </div>
+            <div class="card col-xs-12 col-md-3 boxes">
+              <div class="card-body">
+                <h3>Promotor - Promotora</h3>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a class="btn btn-dark" href="derechos-familia.html" role="button" title="barra">Contactanos</a>
+              </div>
+            </div>
+        </div>
+  
+        <div class="center-xs">
           <br>
           <h1><b>Nuestros contactos</b></h1>
           <p>
@@ -60,15 +74,20 @@
           <p>
             <b>Dirección:</b> Huerfanos 1011, Local 5 subterraneo, Santiago Centro
           </p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d989.8296336970195!2d-70.65182456737196!3d-33.439489381519465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5a3f5fcf15b%3A0xadf4712c1aa8da64!2sHu%C3%A9rfanos%201011%2C%20Santiago%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1643979000484!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d989.8296336970195!2d-70.65182456737196!3d-33.439489381519465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5a3f5fcf15b%3A0xadf4712c1aa8da64!2sHu%C3%A9rfanos%201011%2C%20Santiago%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1643979000484!5m2!1ses!2scl" style="border:0; width: 80%; height: auto;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-
-      <!--Boton Whatsapp-->
-      <div class="btn-whatsapp">
-        <a href="https://wa.me/" target="_blank">
-        <img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
-        </a>
+  
+        <!--Boton Whatsapp-->
+        <div class="btn-whatsapp">
+          <a href="https://wa.me/" target="_blank">
+          <img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
+          </a>
+        </div>
       </div>
+
+      <footer class="content-footer">
+        <h2>DASANGO WEB DEVELOPMENT</h2>
+      </footer>
     
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
