adding html commet section

--- a/index.html
+++ b/index.html
@@ -51,16 +51,18 @@
             <h1><b>Oferta Laboral</b></h1>
             <div class="card col-xs-12 col-md-3 boxes">
               <div class="card-body">
-                <h3>Promotor - Promotora</h3>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a class="btn btn-dark" href="derechos-familia.html" role="button" title="barra">Contactanos</a>
+                <h3>Atención en barra</h3>
+                <p class="card-text">Se busca señorita <b>con o sin experiencia</b> para atender barra de café</p>
+                <p>Para más infromación, contactanos aquí abajo</p>
+                <a class="btn btn-dark" href="https://wa.me/" target="_blank" role="button" title="barra">Contactanos</a>
               </div>
             </div>
             <div class="card col-xs-12 col-md-3 boxes">
               <div class="card-body">
                 <h3>Promotor - Promotora</h3>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a class="btn btn-dark" href="derechos-familia.html" role="button" title="barra">Contactanos</a>
+                <p class="card-text">Se busca personal que pueda captar cliente para nuestro local</p>
+                <p>Para más infromación, contactanos aquí abajo</p>
+                <a class="btn btn-dark" href="https://wa.me/" target="_blank" role="button" title="barra">Contactanos</a>
               </div>
             </div>
         </div>
@@ -75,6 +77,29 @@
             <b>Dirección:</b> Huerfanos 1011, Local 5 subterraneo, Santiago Centro
           </p>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d989.8296336970195!2d-70.65182456737196!3d-33.439489381519465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5a3f5fcf15b%3A0xadf4712c1aa8da64!2sHu%C3%A9rfanos%201011%2C%20Santiago%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1643979000484!5m2!1ses!2scl" style="border:0; width: 80%; height: auto;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        
+        <br><br><br>
+        
+        <div class="row center-xs">
+          <br>
+          <h1><b>Tu opinón nos importa</b></h1>
+
+          <form>
+            <div class="mb-3 col-xs-12 col-md-6 col-md-offset-3">
+              <label for="fName" class="form-label">Nombre:</label>
+              <input type="text" class="form-control" id="fName" placeholder="Ingrese su nombre">
+            </div>
+            <div class="mb-3 col-xs-12 col-md-6 col-md-offset-3">
+              <label for="taComment" class="form-label">Comentario:</label>
+              <textarea class="form-control" id="taComment" rows="3" placeholder="Ingrese un comentario"></textarea>
+            </div>
+            <div>
+              <!--Submit Button-->
+              <button type="submit" class="btn btn-secondary">Enviar</button>
+            </div>
+          </form>
+
         </div>
   
         <!--Boton Whatsapp-->
