--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         
         <div class="row center-xs">
           <br>
-          <h1><b>Tu opinón nos importa</b></h1>
+          <h1><b>Tu opinión nos importa</b></h1>
 
           <form>
             <div class="mb-3 col-xs-12 col-md-6 col-md-offset-3">
@@ -96,7 +96,7 @@
             </div>
             <div>
               <!--Submit Button-->
-              <button type="submit" class="btn btn-secondary">Enviar</button>
+              <button type="submit" class="btn btn-dark">Enviar</button>
             </div>
           </form>
 
