Adding whatsapp number

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h3>Atención en barra</h3>
                 <p class="card-text">Se busca señorita <b>con o sin experiencia</b> para atender barra de café</p>
                 <p>Para más infromación, contactanos aquí abajo</p>
-                <a class="btn btn-dark" href="https://wa.me/" target="_blank" role="button" title="barra">Contactanos</a>
+                <a class="btn btn-dark" href="https://wa.me/56958877347" target="_blank" role="button" title="barra">Contactanos</a>
               </div>
             </div>
             <div class="card col-xs-12 col-md-3 boxes">
@@ -62,7 +62,7 @@
                 <h3>Promotor - Promotora</h3>
                 <p class="card-text">Se busca personal que pueda captar cliente para nuestro local</p>
                 <p>Para más infromación, contactanos aquí abajo</p>
-                <a class="btn btn-dark" href="https://wa.me/" target="_blank" role="button" title="barra">Contactanos</a>
+                <a class="btn btn-dark" href="https://wa.me/56958877347" target="_blank" role="button" title="promotor">Contactanos</a>
               </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
   
         <!--Boton Whatsapp-->
         <div class="btn-whatsapp">
-          <a href="https://wa.me/" target="_blank">
+          <a href="https://wa.me/56958877347" target="_blank">
           <img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
           </a>
         </div>
